# mecs

./: .clang-format  .clang-tidy  .clangd  .gitattributes  CMakeLists.txt  LICENSE  README.md
include/mecs/: base.h  defines.h  iterator.h  mecs.h  registry.h  world.h
include/mecshpp/: base.hpp  mecs.hpp  mecsrtti.hpp
src/: main.cc
src/mecs/: archetype.cc  collections.cc  collections.h  collections.natvis  iterator.cc  private.cc  private.h  registry.cc  world.cc
src/mecshpp/: mecs.cc
tests/: base.cc  collections.cc  prefabs.cc  reflection.cc  samples.cc  test_private.cc  test_private.hpp
